single quotation marks in html

--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -394,7 +394,7 @@
       </div>
       <div class='row'>
         <div class='col'>
-          <small class="form-text text-muted">
+          <small class='form-text text-muted'>
             Tip: Add a field/value pair to the query at the cursor position by pressing <kbd>ctrl</kbd> or <kbd>⌘</kbd> while selecting.
           </small>
         </div>
