visibility filter always needs to be strict otherwise unspecific search because of 'user' and 'useronly' but users can add wildcards (visibility:user%) or combine two terms with or (visibility:user or visibility:useronly)

--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -385,8 +385,8 @@
           <label for='visibility'>{{ 'And visibility is:'|trans }} </label><br>
           <select id='visibility' name='vis' data-filter='visibility' class='form-control filterHelper'>
             <option value='' data-action='clear'>{{ 'Select visibility'|trans }}</option>
-            {% for key, value in visibilityArr %}
-              <option value='{{ key }}' {{- Request.query.get('vis') == key ? ' selected' }}>{{ value|trans }}</option>
+            {% for value in visibilityArr %}
+              <option {{- Request.query.get('vis') == value ? ' selected' }}>{{ value|trans }}</option>
             {% endfor %}
           </select>
         </div>
