make all status timestampable
having the option to set some status as non timestampable doesn't make
sense now that an experiment can be timestamped several times. Also it
hid that feature from most experiments. This change also simplifies the
code a bit, which is always nice.

--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -104,7 +104,7 @@
     {% endif %}
 
     <!-- show timestamp button -->
-    {% if Entity.isTimestampable and Entity.type == 'experiments' and not App.Session.has('is_anon') %}
+    {% if Entity.type == 'experiments' and not App.Session.has('is_anon') %}
       <a href='#' class='elab-tooltip mr-1' data-action='toggle-modal' data-target='timestampModal'>
         <span>{{ 'Timestamp Experiment'|trans }}</span>
         <i title='{{ 'Timestamp Experiment'|trans }}' class='far fa-calendar-check fa-2x'></i>
