remove clickable class from elements with a data-action
because all data-action elements have the cursor:pointer css

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -175,7 +175,7 @@
             {% set tagsIdArr = Entity.entityData.tags_id|split(',') %}
             {% set tagsValueArr = Entity.entityData.tags|split('|') %}
             {% for tag in tagsValueArr -%}
-              <a class='tag mr-1 clickable hover-danger' data-action='unreference-tag' data-tagid='{{ tagsIdArr[loop.index0] }}'>{{ tag|raw }}</a>
+              <a class='tag mr-1 hover-danger' data-action='unreference-tag' data-tagid='{{ tagsIdArr[loop.index0] }}'>{{ tag|raw }}</a>
             {%- endfor -%}
           {% endif %}
         </div>
