--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -131,7 +131,7 @@
 </nav>
 
 <!-- SHOW FAVTAGS PANEL -->
-<a class='clickable float-left' data-action='toggle-favtags' id='favtags-opener' title='{{ 'Open favorite tags'|trans }}' hidden>
+<a class='float-left' data-action='toggle-favtags' id='favtags-opener' title='{{ 'Open favorite tags'|trans }}' hidden>
   <i class='fas fa-chevron-right fa-2x'></i>
 </a>
 <div class='real-container'>
