--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -267,7 +267,7 @@
           <li><strong>title</strong>: Simple or Quoted term</li>
           <li><strong>visibility</strong>: Simple or Quoted term</li>
         </ul>
-        <a class='clickable' data-action='toggle-modal' data-target='advancedSearchModal'>{{ 'Full syntax'|trans }}</a>
+        <a data-action='toggle-modal' data-target='advancedSearchModal'>{{ 'Full syntax'|trans }}</a>
       </div>
     </div>
 
