--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -504,7 +504,7 @@
     <hr>
     <div class='mt-2' id='tagMgrDiv'>
       {% for tag in tagsArr %}
-        <p><a class='mr-1 clickable' data-action='destroy-tag' data-tagid='{{ tag.id }}' title='{{ 'Delete'|trans }}'><i class='fas fa-trash-alt'></i></a><span class='tag editable hl-hover' data-tagid='{{ tag.id }}'>{{ tag.tag|raw }}</span></p>
+        <p><a class='mr-1' data-action='destroy-tag' data-tagid='{{ tag.id }}' title='{{ 'Delete'|trans }}'><i class='fas fa-trash-alt'></i></a><span class='tag editable hl-hover' data-tagid='{{ tag.id }}'>{{ tag.tag|raw }}</span></p>
       {% endfor %}
     </div>
   </div>
