--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -28,7 +28,7 @@
                     {% endif %}
 
                     <!-- Edit filename -->
-                    <a class='dropdown-item clickable' data-action='rename-upload' data-id='{{ upload.id }}' data-type='{{ upload.type }}'
+                    <a class='dropdown-item' data-action='rename-upload' data-id='{{ upload.id }}' data-type='{{ upload.type }}'
                       data-itemid='{{ upload.item_id }}' data-msg='{{ 'Edit filename'|trans }}' title='{{ 'Edit filename'|trans }}'>
                       <i class='fas fa-fw fa-pencil-alt mr-1'></i>{{ 'Edit filename'|trans }}</a>
 
@@ -46,16 +46,16 @@
                     {% endif %}
 
                     <!-- Upload a new version -->
-                    <a class='dropdown-item clickable' data-action='replace-upload' data-uploadid='{{ upload.id }}'>
+                    <a class='dropdown-item' data-action='replace-upload' data-uploadid='{{ upload.id }}'>
                       <i class='fas fa-fw fa-sync-alt mr-1'></i>{{ 'Upload a new version of this file'|trans }}</a>
 
                     <!-- More info -->
-                    <a class='dropdown-item clickable' data-action='more-info-upload' data-uploadid='{{ upload.id }}'>
+                    <a class='dropdown-item' data-action='more-info-upload' data-uploadid='{{ upload.id }}'>
                       <i class='fas fa-fw fa-info-circle mr-1'></i>{{ 'More information'|trans }}</a>
 
                     <!-- DESTROY -->
                     <div class='dropdown-divider'></div>
-                    <a class='dropdown-item hover-danger clickable' data-action='destroy-upload' data-uploadid='{{ upload.id }}'>
+                    <a class='dropdown-item hover-danger' data-action='destroy-upload' data-uploadid='{{ upload.id }}'>
                       <i class='fas fa-fw fa-trash-alt fa-fw mr-1' title='{{ 'Delete'|trans }}'></i>{{ 'Delete'|trans }}
                     </a>
                   </div>
