add mathjax-ignore class to tags to prevent mathjax render
fix #3570

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -165,7 +165,7 @@
   <input id='title_input' class='form-control' type='text' name='title' value='{{ Entity.entityData.title|raw }}' required />
 
   <!-- TAGS -->
-  <div class='row mb-2'>
+  <div class='row mb-2 mathjax-ignore'>
     <div class='col'>
       <i class='fas fa-tags fa-fw mr-1'></i><label for='createTagInput'>{{ 'Tags'|trans }}</label>
       <div class='tags form-inline'>
