add the basis for eln export

--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -74,6 +74,7 @@
           <option value='multiPdf'>{{ 'Make PDF'|trans }}</option>
           <option value='qrPdf'>{{ 'Make QR codes PDF'|trans }}</option>
           <option value='json'>{{ 'Make JSON'|trans }}</option>
+          <option value='eln'>{{ 'Make ELN'|trans }}</option>
         </select>
 
         <!-- Add a tag -->
