--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -74,6 +74,11 @@
       <i title='{{ 'Make a ZIP'|trans }}' class='fas fa-file-archive fa-2x'></i>
     </a>
 
+    <a class='elab-tooltip mr-1' href='make.php?what=eln&id={{ Entity.id }}&type={{ Entity.type }}'>
+      <span>{{ 'Make an ELN'|trans }}</span>
+      <i title='{{ 'Make an ELN'|trans }}' class='fas fa-box-archive fa-2x'></i>
+    </a>
+
     {% if Entity.type == 'items' %}
       {% if Entity.entityData.bookable %}
         <a class='elab-tooltip mr-1' href='team.php?item={{ Entity.id }}'>
