allow export of templates as .eln
introduce EntityFactory

--- a/src/templates/templates-edit.html
+++ b/src/templates/templates-edit.html
@@ -1,5 +1,28 @@
+<!-- MORE OPTIONS DROPDOWN MENU (···) -->
+<div class='dropdown float-right'>
+  <a href='#' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' role='button'>
+    <i class='fas fa-ellipsis-v fa-2x'></i>
+  </a>
+  <div class='dropdown-menu dropdown-menu-right' aria-label='{{ 'More options'|trans }}'>
+    <!-- MANAGE PERMISSIONS -->
+    <a href='#' class='dropdown-item' data-action='toggle-modal' data-target='permModal' data-read='{{ templateData.canread }}' data-write='{{ templateData.canwrite }}'>
+      <i class='fas fa-share-alt fa-fw mr-1'></i>{{ 'Manage Permissions'|trans }}
+    </a>
+    <!-- DOWNLOAD -->
+    <a href='#' class='dropdown-item' data-action='download-template' data-name='{{ templateData.title }}' data-id='{{ templateData.id }}'>
+      <i class='fas fa-download fa-fw mr-1'></i>{{ 'Download template'|trans }}
+    </a>
+    <!-- DESTROY -->
+    <div class='dropdown-divider'></div>
+    <a href='#' data-action='destroy-template' class='dropdown-item hover-danger' data-id='{{ templateData.id }}'>
+      <i class='fas fa-trash-alt fa-fw mr-1'></i>{{ 'Destroy template'|trans }}
+    </a>
+  </div>
+</div>
+
 <div class='row' style='line-height: 160%'>
   <div class='col col-md-12'>
+
     <!-- TAGS -->
     <i class='fas fa-tags'></i>
     <label>{{ 'Tags'|trans }}</label>
@@ -20,31 +43,6 @@
       <input type='text' data-autocomplete='tags' class='createTagInput form-control' id='createTagInput_{{ templateData.id }}' data-id='{{ templateData.id }}' placeholder='{{ 'Add a tag'|trans }}' />
     </div>
   </div>
-
-  <!-- MORE OPTIONS DROPDOWN MENU (···) -->
-  <div class='col'>
-    <div class='dropdown'>
-      <a class='float-right clickable' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' role='button'>
-        <i class='fas fa-ellipsis-v fa-2x'></i>
-      </a>
-      <div class='dropdown-menu dropdown-menu-right' aria-label='{{ 'More options'|trans }}'>
-        <!-- MANAGE PERMISSIONS -->
-        <a href='#' class='dropdown-item' data-action='toggle-modal' data-target='permModal' data-read='{{ templateData.canread }}' data-write='{{ templateData.canwrite }}'>
-          <i class='fas fa-share-alt fa-fw mr-1'></i>{{ 'Manage Permissions'|trans }}
-        </a>
-        <!-- DOWNLOAD -->
-        <a href='#' class='dropdown-item' data-action='download-template' data-name='{{ templateData.title }}' data-id='{{ templateData.id }}'>
-          <i class='fas fa-download fa-fw mr-1'></i>{{ 'Download template'|trans }}
-        </a>
-        <!-- DESTROY -->
-        <div class='dropdown-divider'></div>
-        <a href='#' data-action='destroy-template' class='dropdown-item hover-danger' data-id='{{ templateData.id }}'>
-          <i class='fas fa-trash-alt fa-fw mr-1'></i>{{ 'Destroy template'|trans }}
-        </a>
-      </div>
-    </div>
-  </div>
-
 </div>
 
 <label for='title_input'>{{ 'Title'|trans }}</label>
