use fontawesome scss instead of i2svg
now the icons load much faster on the page!

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -20,3 +20,6 @@ $lightblue: #c4f9ff;
 $darkred: #dd1e00;
 $lightred: #ffc1b7;
 $green: #54aa08;
+
+/* font awesome */
+$fa-font-path: '/assets/fonts';
