--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -86,7 +86,7 @@
         <!-- Notification bell -->
         {% if App.Session.has('is_auth') and not App.Session.has('is_anon') %}
         <div class='nav-item dropdown ml-3' id='navbarNotifDiv'>
-          <a class='nav-link dropdown-toggle' href='#' id='navbarNotifDropdown' role='button' aria-label='{{ 'Notifications'|trans }}' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'><i class='far fa-bell navbar-icon {{ App.notifsArr|filter(n => n.is_ack == 0)|length ? 'active' }}'></i></a>
+          <a class='nav-link dropdown-toggle' href='#' id='navbarNotifDropdown' role='button' aria-label='{{ 'Notifications'|trans }}' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'><i class='far fa-bell fa-2x {{ App.notifsArr|filter(n => n.is_ack == 0)|length ? 'active' }}'></i></a>
           <div class='dropdown-menu dropdown-menu-right' id='navbar-notif-dropdown' aria-labelledby='navbarNotifDropdown'><span class='dropdown-header'>{{ 'Notifications'|trans }}</span>
             {% if App.notifsArr %}
               {% for notif in App.notifsArr %}
@@ -104,7 +104,7 @@
         {% endif %}
 
         <div class='nav-item dropdown'>
-          <a class='nav-link dropdown-toggle' href='#' id='navbarDropdown' role='button' aria-label='{{ 'User menu'|trans }}' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'><i class='fas fa-user navbar-icon'></i></a>
+          <a class='nav-link dropdown-toggle' href='#' id='navbarDropdown' role='button' aria-label='{{ 'User menu'|trans }}' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'><i class='fas fa-user fa-2x'></i></a>
           <div class='dropdown-menu dropdown-menu-right' aria-labelledby='navbarDropdown'><h6 class='dropdown-header'>{{ 'Logged in as'|trans }} {{ App.Users.userData.firstname|default('Anonymous')|raw }}</h6>
             {% if App.Session.has('is_auth') and not App.Session.has('is_anon') %}
               <a class='dropdown-item' href='ucp.php'><i class='fas fa-cogs fa-fw'></i> {{ 'User panel'|trans }}</a>
