--- a/src/templates/todolist-panel.html
+++ b/src/templates/todolist-panel.html
@@ -6,7 +6,7 @@
     <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='todolistToggleIcon'><i id='todolistToggleIcon' class='fas fa-chevron-circle-down'></i> {{ 'Todolist'|trans }}</h3>
 
     <div data-save-hidden='todolistMainDiv'>
-      <div class='input-group mb-2'>
+      <div class='input-group mt-2 mb-3'>
         <input id='todo' type='text' class='form-control form-inline' aria-label='{{ 'Add'|trans }}' placeholder='{{ 'New item'|trans }}'>
         <div class='input-group-append'>
           <button class='btn btn-outline-secondary' type='button' title='{{ 'Add'|trans }}' data-action='create-todoitem' aria-label='{{ 'Add'|trans }}'>
@@ -41,14 +41,14 @@
   <div class='d-inline-block mx-2 mt-2 w-100'>
     <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='todoStepsExperimentIcon'><i id='todoStepsExperimentIcon' class='fas fa-chevron-circle-down'></i> {% trans %}Experiment{% plural 2 %}Experiments{% endtrans %}</h3>
     <!-- id is needed to fill it -->
-    <ul id='todoStepsExperiment' data-save-hidden='todoStepsExperiment'></ul>
+    <ul id='todoStepsExperiment' class='mt-2' data-save-hidden='todoStepsExperiment'></ul>
   </div>
 
   <div class='clear'></div>
   <div class='d-inline-block mx-2 mt-2 w-100'>
     <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='todoStepsItemIcon'><i id='todoStepsItemIcon' class='fas fa-chevron-circle-down'></i> {{ 'Items'|trans }}</h3>
     <!-- id is needed to fill it -->
-    <ul id='todoStepsItem' data-save-hidden='todoStepsItem'></ul>
+    <ul id='todoStepsItem' class='mt-2' data-save-hidden='todoStepsItem'></ul>
   </div>
 </div>
 
