bring back favtag arrow hidden by default so it doesn't show up
everywhere

--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -128,7 +128,7 @@
 </nav>
 
 <!-- SHOW FAVTAGS PANEL -->
-<a class='float-left' data-action='toggle-favtags' id='favtags-opener' title='{{ 'Open favorite tags'|trans }}'>
+<a class='float-left' data-action='toggle-favtags' id='favtags-opener' title='{{ 'Open favorite tags'|trans }}' hidden>
   <i class='fas fa-chevron-right fa-2x'></i>
 </a>
 <div class='real-container'>
