fix entityajaxcontroller and thumbnail icons

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -804,6 +804,7 @@ the form-control fails to do that so we do the border ourselves */
 }
 
 .thumb {
+    font-size: 5em !important;
     height: 100px;
     min-height: 50px;
     min-width: 50px;
