add eln to admin export menu

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -447,9 +447,10 @@
     </select>
     <label for='categoryExportFormat'>{{ 'Select export format:'|trans }}</label>
     <select class='form-control col-md-4' id='categoryExportFormat' autocomplete='off'>
-      <option value='zip'>{{ 'Make Zip'|trans }}</option>
-      <option value='csv'>{{ 'Make Csv'|trans }}</option>
-      <option value='multiPdf'>{{ 'Make PDF'|trans }}</option>
+      <option value='eln'>{{ 'Make an ELN'|trans }}</option>
+      <option value='zip'>{{ 'Make a ZIP'|trans }}</option>
+      <option value='csv'>{{ 'Make a CSV'|trans }}</option>
+      <option value='multiPdf'>{{ 'Make a PDF'|trans }}</option>
       <option value='qrPdf'>{{ 'Make QR codes PDF'|trans }}</option>
       <option value='json'>{{ 'Make JSON'|trans }}</option>
     </select>
@@ -469,6 +470,7 @@
     </select>
     <label for='userExportFormat'>{{ 'Select export format:'|trans }}</label>
     <select class='form-control col-md-4' id='userExportFormat' autocomplete='off'>
+      <option value='eln'>{{ 'Make an ELN'|trans }}</option>
       <option value='zip'>{{ 'Make Zip'|trans }}</option>
       <option value='csv'>{{ 'Make Csv'|trans }}</option>
       <option value='multiPdf'>{{ 'Make PDF'|trans }}</option>
