--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -69,6 +69,7 @@
         <!-- Export -->
         <select data-action='export-selected-entities' autocomplete='off' class='mr-1 mb-2 form-control'>
           <option selected disabled>{{ 'Export'|trans }}</option>
+          <option value='eln'>{{ 'Make ELN'|trans }}</option>
           <option value='zip'>{{ 'Make Zip'|trans }}</option>
           <option value='csv'>{{ 'Make Csv'|trans }}</option>
           <option value='multiPdf'>{{ 'Make PDF'|trans }}</option>
